[package]
name = "repos"
version = "0.1.0"
authors = ["Wilhelm Hugo Kirschbaum <wkirschbaum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
hyper = { version = "0.13" }

[[bin]]
name = "repos"
path = "main.rs"
